--- a/MicroTactics.CSharp.csproj
+++ b/MicroTactics.CSharp.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Assets\Features\Attack\AiAttackOrderSystem.cs" />
     <Compile Include="Assets\Features\Attack\ApplyForceSystem.cs" />
     <Compile Include="Assets\Features\Attack\ArrowStickToCollidedSystem.cs" />
+    <Compile Include="Assets\Features\Attack\AttachToComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackInputComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackInteractionSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackOrderComponent.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="Assets\Features\UnitsCacheComponent.cs" />
     <Compile Include="Assets\Features\UnitsCacheSystem.cs" />
     <Compile Include="Assets\Features\View\AddViewSystem.cs" />
+    <Compile Include="Assets\Features\View\AttachRootComponent.cs" />
     <Compile Include="Assets\Features\View\HideHiddenSystem.cs" />
     <Compile Include="Assets\Features\View\LinkViewsStartSystem.cs" />
     <Compile Include="Assets\Features\View\RenderPositionSystem.cs" />
@@ -186,6 +188,8 @@
     <Compile Include="Assets\Generated\Assets.Features.Selection.SelectedInteractionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.SquadAudioSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.View.AddViewParentSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\AttachRootComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\AttachToComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AttackInputComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AttackInteractionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AttackOrderComponentGeneratedExtension.cs" />
