--- a/MicroTactics.CSharp.csproj
+++ b/MicroTactics.CSharp.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Assets\Features\Attack\ApplyForceSystem.cs" />
     <Compile Include="Assets\Features\Attack\ArrowStickToCollidedSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttachToComponent.cs" />
+    <Compile Include="Assets\Features\Attack\AttachToSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackInputComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackInteractionSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackOrderComponent.cs" />
@@ -178,6 +179,7 @@
     <Compile Include="Assets\Generated\AnimateUnitSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ApplyForceSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ArrowStickToCollidedSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\Assets.Features.Attack.AttachToSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Attack.ReloadSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaAddDecoratorSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaRemoveDecoratorSystemGeneratedExtension.cs" />
