--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -82,6 +82,8 @@
   <ItemGroup>
     <Compile Include="Features\AiAttackOrderSystemTests.cs" />
     <Compile Include="Features\AiMoveOrderSystemTests.cs" />
+    <Compile Include="Features\ClearCollisionsSystemTests.cs" />
+    <Compile Include="Features\CollisionDamageSystemTests.cs" />
     <Compile Include="Features\CreateSquad\SelectionAreaDecoratorSystemTests.cs" />
     <Compile Include="Features\DelayedDestroySystemTests.cs" />
     <Compile Include="Features\ReloadSystemTests.cs" />
