--- a/MicroTactics.CSharp.csproj
+++ b/MicroTactics.CSharp.csproj
@@ -129,7 +129,7 @@
     <Compile Include="Assets\Features\Destruction\DestroySystem.cs" />
     <Compile Include="Assets\Features\Destruction\RemoveViewSystem.cs" />
     <Compile Include="Assets\Features\EnemyComponent.cs" />
-    <Compile Include="Assets\Features\GameObjectConfigure.cs" />
+    <Compile Include="Assets\Features\GameobjectConfigurer.cs" />
     <Compile Include="Assets\Features\InputComponent.cs" />
     <Compile Include="Assets\Features\MouseInput.cs" />
     <Compile Include="Assets\Features\Move\AiComponent.cs" />
@@ -168,6 +168,7 @@
     <Compile Include="Assets\Features\View\AddViewSystem.cs" />
     <Compile Include="Assets\Features\View\AttachRootComponent.cs" />
     <Compile Include="Assets\Features\View\HideHiddenSystem.cs" />
+    <Compile Include="Assets\Features\View\KeepViewComponent.cs" />
     <Compile Include="Assets\Features\View\LinkViewsStartSystem.cs" />
     <Compile Include="Assets\Features\View\RenderPositionSystem.cs" />
     <Compile Include="Assets\Features\View\RenderRotationSystem.cs" />
@@ -186,8 +187,7 @@
     <Compile Include="Assets\Generated\Assets.Features.Attack.ClearCollisionsSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Attack.CollisionDamageSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Attack.ReloadSystemGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaAddDecoratorSystemGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaRemoveDecoratorSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\Assets.Features.CreateSquad.SelectionAreaDecoratorSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Destruction.DelayedDestroySystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Move.RemoveMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Assets.Features.Selection.MoveInteractionSystemGeneratedExtension.cs" />
@@ -217,6 +217,7 @@
     <Compile Include="Assets\Generated\HiddenComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\HideHiddenSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\InputComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\KeepViewComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\LinkViewsStartSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\MeshUpdateSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\MoveInputComponentGeneratedExtension.cs" />
