And now units fire according to their orientation

--- a/MicroTactics.Tests/MicroTactics.Tests.csproj
+++ b/MicroTactics.Tests/MicroTactics.Tests.csproj
@@ -105,7 +105,7 @@
     <Compile Include="Features\ArrowStickToCollidedSystemTests.cs" />
     <Compile Include="Features\TestRandom.cs" />
     <Compile Include="Features\UnitsCacheSystemTests.cs" />
-    <Compile Include="Features\QuaternionCloseToExtensions.cs" />
+    <Compile Include="Features\CloseToExtensions.cs" />
     <Compile Include="FloatExtensionsTests.cs" />
     <Compile Include="FormationTests.cs" />
     <Compile Include="IEnumerableExtensions.cs" />
