--- a/MicroTactics.CSharp.csproj
+++ b/MicroTactics.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.2.0f3</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -90,98 +88,101 @@
     <Compile Include="Assets\ConvexHullCalculator.cs" />
     <Compile Include="Assets\EntitasSetup.cs" />
     <Compile Include="Assets\Events.cs" />
-    <Compile Include="Assets\Features\Physics\ApplyPhysicsSystem.cs" />
     <Compile Include="Assets\Features\Attack\AiAttackOrderSystem.cs" />
-    <Compile Include="Assets\Features\Physics\ArrowStickToCollidedSystem.cs" />
+    <Compile Include="Assets\Features\Attack\ArrowConfiguration.cs" />
     <Compile Include="Assets\Features\Attack\AttachToComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttachToSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackInputComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackInteractionSystem.cs" />
     <Compile Include="Assets\Features\Attack\AttackOrderComponent.cs" />
     <Compile Include="Assets\Features\Attack\AttackSystem.cs" />
-    <Compile Include="Assets\Features\Physics\ClearCollisionsSystem.cs" />
-    <Compile Include="Assets\Features\Physics\Collidable.cs" />
-    <Compile Include="Assets\Features\Physics\CollisionComponent.cs" />
-    <Compile Include="Assets\Features\Physics\CollisionDamageSystem.cs" />
     <Compile Include="Assets\Features\Attack\ForceComponent.cs" />
     <Compile Include="Assets\Features\Attack\HealthComponent.cs" />
-    <Compile Include="Assets\Features\Physics\PitchFromVelocitySystem.cs" />
     <Compile Include="Assets\Features\Attack\ReloadComponent.cs" />
     <Compile Include="Assets\Features\Attack\ReloadSystem.cs" />
     <Compile Include="Assets\Features\Attack\RenderAttackArrowSystem.cs" />
-    <Compile Include="Assets\Features\Common\SpawnHelper.cs" />
     <Compile Include="Assets\Features\Attack\SquadAttackOrderSystem.cs" />
-    <Compile Include="Assets\Features\Physics\StickableComponent.cs" />
-    <Compile Include="Assets\Features\Physics\VelocityComponent.cs" />
-    <Compile Include="Assets\Features\Sound\AudioComponent.cs" />
-    <Compile Include="Assets\Features\Selection\ConvexHullCalculator.cs" />
-    <Compile Include="Assets\Features\SquadCreation\BoxFormationComponent.cs" />
-    <Compile Include="Assets\Features\SquadCreation\ChildrenComponent.cs" />
     <Compile Include="Assets\Features\Common\CreateEntityOnStart.cs" />
-    <Compile Include="Assets\Features\SquadCreation\ParentComponent.cs" />
+    <Compile Include="Assets\Features\Common\GameObjectConfigurer.cs" />
     <Compile Include="Assets\Features\Common\PositionComponent.cs" />
     <Compile Include="Assets\Features\Common\QuaternionClass.cs" />
-    <Compile Include="Assets\Features\View\ResourceComponent.cs" />
-    <Compile Include="Assets\Features\Selection\SelectionAreaDecoratorSystems.cs" />
-    <Compile Include="Assets\Features\SquadCreation\SquadBehaviourConfiguration.cs" />
-    <Compile Include="Assets\Features\SquadCreation\SquadComponent.cs" />
-    <Compile Include="Assets\Features\SquadCreation\CreateSquadSystem.cs" />
-    <Compile Include="Assets\Features\SquadCreation\UnitBehaviourConfiguration.cs" />
-    <Compile Include="Assets\Features\SquadCreation\UnitComponent.cs" />
+    <Compile Include="Assets\Features\Common\RotationComponent.cs" />
+    <Compile Include="Assets\Features\Common\SpawnHelper.cs" />
     <Compile Include="Assets\Features\Common\VectorClass.cs" />
-    <Compile Include="Assets\Features\View\ViewComponent.cs" />
     <Compile Include="Assets\Features\Destruction\DelayedDestroyComponent.cs" />
     <Compile Include="Assets\Features\Destruction\DelayedDestroySystem.cs" />
     <Compile Include="Assets\Features\Destruction\DestroyComponent.cs" />
     <Compile Include="Assets\Features\Destruction\DestroySystem.cs" />
+    <Compile Include="Assets\Features\Destruction\LeavingBodyComponent.cs" />
     <Compile Include="Assets\Features\Destruction\RemoveViewSystem.cs" />
-    <Compile Include="Assets\Features\Common\GameObjectConfigurer.cs" />
     <Compile Include="Assets\Features\Ground\GroundBehaviourConfiguration.cs" />
+    <Compile Include="Assets\Features\Ground\GroundComponent.cs" />
     <Compile Include="Assets\Features\Input\InputComponent.cs" />
     <Compile Include="Assets\Features\Input\MouseInput.cs" />
-    <Compile Include="Assets\Features\SquadCreation\AiComponent.cs" />
     <Compile Include="Assets\Features\Move\AiMoveOrderSystem.cs" />
     <Compile Include="Assets\Features\Move\AnimateComponent.cs" />
     <Compile Include="Assets\Features\Move\AnimateUnitSystem.cs" />
-    <Compile Include="Assets\Features\Ground\GroundComponent.cs" />
     <Compile Include="Assets\Features\Move\MoveInputComponent.cs" />
     <Compile Include="Assets\Features\Move\MoveInteractionSystem.cs" />
     <Compile Include="Assets\Features\Move\MoveOrderComponent.cs" />
     <Compile Include="Assets\Features\Move\MoveSystem.cs" />
     <Compile Include="Assets\Features\Move\MovementComponent.cs" />
-    <Compile Include="Assets\Features\SquadCreation\PlayerComponent.cs" />
     <Compile Include="Assets\Features\Move\RemoveMoveOrderSystem.cs" />
     <Compile Include="Assets\Features\Move\RenderMoveArrowSystem.cs" />
+    <Compile Include="Assets\Features\Move\SquadCenterPositionSystem.cs" />
     <Compile Include="Assets\Features\Move\SquadMoveOrderSystem.cs" />
-    <Compile Include="Assets\Features\SquadCreation\UnitInSquadPositioner.cs" />
+    <Compile Include="Assets\Features\Physics\ApplyPhysicsSystem.cs" />
+    <Compile Include="Assets\Features\Physics\ArrowStickToCollidedSystem.cs" />
+    <Compile Include="Assets\Features\Physics\ClearCollisionsSystem.cs" />
+    <Compile Include="Assets\Features\Physics\Collidable.cs" />
+    <Compile Include="Assets\Features\Physics\CollisionComponent.cs" />
+    <Compile Include="Assets\Features\Physics\CollisionDamageSystem.cs" />
     <Compile Include="Assets\Features\Physics\PhysicsComponent.cs" />
+    <Compile Include="Assets\Features\Physics\PitchFromVelocityComponent.cs" />
+    <Compile Include="Assets\Features\Physics\PitchFromVelocitySystem.cs" />
     <Compile Include="Assets\Features\Physics\ReadPhysicsSystem.cs" />
     <Compile Include="Assets\Features\Physics\RemovePhysicsSystem.cs" />
-    <Compile Include="Assets\Features\Common\RotationComponent.cs" />
+    <Compile Include="Assets\Features\Physics\StickableComponent.cs" />
+    <Compile Include="Assets\Features\Physics\VelocityComponent.cs" />
     <Compile Include="Assets\Features\Selection\BoundingMeshComponent.cs" />
+    <Compile Include="Assets\Features\Selection\ConvexHullCalculator.cs" />
     <Compile Include="Assets\Features\Selection\HiddenComponent.cs" />
     <Compile Include="Assets\Features\Selection\MeshUpdateSystem.cs" />
     <Compile Include="Assets\Features\Selection\SelectInteractionSystem.cs" />
     <Compile Include="Assets\Features\Selection\SelectedComponent.cs" />
     <Compile Include="Assets\Features\Selection\SelectedInteractionSystem.cs" />
     <Compile Include="Assets\Features\Selection\SelectionAreaComponent.cs" />
+    <Compile Include="Assets\Features\Selection\SelectionAreaDecoratorSystems.cs" />
     <Compile Include="Assets\Features\Selection\SelectionAreaUpdateSystem.cs" />
     <Compile Include="Assets\Features\Selection\ShowSelectedIndicatorForSquadSystem.cs" />
+    <Compile Include="Assets\Features\Selection\Triangulator.cs" />
+    <Compile Include="Assets\Features\Sound\AudioComponent.cs" />
     <Compile Include="Assets\Features\Sound\SquadAudioSystem.cs" />
-    <Compile Include="Assets\Features\Move\SquadCenterPositionSystem.cs" />
-    <Compile Include="Assets\Triangulator.cs" />
+    <Compile Include="Assets\Features\SquadCreation\AiComponent.cs" />
+    <Compile Include="Assets\Features\SquadCreation\BoxFormationComponent.cs" />
+    <Compile Include="Assets\Features\SquadCreation\ChildrenComponent.cs" />
+    <Compile Include="Assets\Features\SquadCreation\CreateSquadSystem.cs" />
+    <Compile Include="Assets\Features\SquadCreation\ParentComponent.cs" />
+    <Compile Include="Assets\Features\SquadCreation\PlayerComponent.cs" />
+    <Compile Include="Assets\Features\SquadCreation\SquadBehaviourConfiguration.cs" />
+    <Compile Include="Assets\Features\SquadCreation\SquadComponent.cs" />
+    <Compile Include="Assets\Features\SquadCreation\UnitBehaviourConfiguration.cs" />
+    <Compile Include="Assets\Features\SquadCreation\UnitComponent.cs" />
+    <Compile Include="Assets\Features\SquadCreation\UnitInSquadPositioner.cs" />
     <Compile Include="Assets\Features\SquadCreation\UnitsCacheComponent.cs" />
     <Compile Include="Assets\Features\SquadCreation\UnitsCacheSystem.cs" />
     <Compile Include="Assets\Features\View\AddViewSystem.cs" />
     <Compile Include="Assets\Features\View\AttachRootComponent.cs" />
     <Compile Include="Assets\Features\View\HideHiddenSystem.cs" />
-    <Compile Include="Assets\Features\Destruction\LeavingBodyComponent.cs" />
     <Compile Include="Assets\Features\View\RenderPositionSystem.cs" />
     <Compile Include="Assets\Features\View\RenderRotationSystem.cs" />
+    <Compile Include="Assets\Features\View\ResourceComponent.cs" />
     <Compile Include="Assets\Features\View\Resources.cs" />
     <Compile Include="Assets\Features\View\SetViewParentSystems.cs" />
+    <Compile Include="Assets\Features\View\ViewComponent.cs" />
     <Compile Include="Assets\FloatExtensions.cs" />
     <Compile Include="Assets\Generated\AddViewSystemGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\AffectingSystemsComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiAttackOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\AiMoveOrderSystemGeneratedExtension.cs" />
@@ -213,6 +214,7 @@
     <Compile Include="Assets\Generated\ChildrenComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\CollisionComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ComponentIds.cs" />
+    <Compile Include="Assets\Generated\CreateSquadSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DelayedDestroyComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DestroyComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\DestroySystemGeneratedExtension.cs" />
@@ -230,6 +232,7 @@
     <Compile Include="Assets\Generated\MovementComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\ParentComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\PhysicsComponentGeneratedExtension.cs" />
+    <Compile Include="Assets\Generated\PitchFromVelocityComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\PitchFromVelocitySystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\PlayerComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\Pools.cs" />
@@ -251,7 +254,6 @@
     <Compile Include="Assets\Generated\SquadAttackOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadCenterPositionSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadComponentGeneratedExtension.cs" />
-    <Compile Include="Assets\Generated\SquadCreationSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\SquadMoveOrderSystemGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\StickableComponentGeneratedExtension.cs" />
     <Compile Include="Assets\Generated\UnitComponentGeneratedExtension.cs" />
@@ -285,6 +287,7 @@
     <Compile Include="Assets\Libraries\Entitas.Unity.VisualDebugging\VisualDebuggingConfig.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity\EntitasPreferencesConfig.cs" />
     <Compile Include="Assets\Libraries\Entitas.Unity\Properties.cs" />
+    <Compile Include="Assets\Libraries\Entitas\AffectingSystemsComponent.cs" />
     <Compile Include="Assets\Libraries\Entitas\Entity.cs" />
     <Compile Include="Assets\Libraries\Entitas\Extensions\AllOfMatcherExtension.cs" />
     <Compile Include="Assets\Libraries\Entitas\Extensions\CollectionExtension.cs" />
@@ -378,16 +381,21 @@
     <Compile Include="Assets\Testing\ColorAssert.cs" />
     <Compile Include="Assets\Testing\FindGameObjectByPartialName.cs" />
     <Compile Include="Assets\Testing\FindGameObjectsByPartialName.cs" />
+    <Compile Include="Assets\Testing\FollowWithOffset.cs" />
     <Compile Include="Assets\Testing\GetChildByPartialName.cs" />
+    <Compile Include="Assets\Testing\GetSquadUnits.cs" />
     <Compile Include="Assets\Testing\InsideColliderAssert.cs" />
+    <Compile Include="Assets\Testing\IsChildOfAssertion.cs" />
     <Compile Include="Assets\Testing\RenderingAssert.cs" />
     <Compile Include="Assets\Testing\RepeatTillTimeout.cs" />
     <Compile Include="Assets\Testing\SelectSquad.cs" />
     <Compile Include="Assets\Testing\SingleRun.cs" />
+    <Compile Include="Assets\Testing\SpawnArrow.cs" />
+    <Compile Include="Assets\Testing\Temp\AddForce.cs" />
     <Compile Include="Assets\Testing\TestSuccess.cs" />
     <Compile Include="Assets\Testing\WilInput.cs" />
     <Compile Include="Assets\TimedDestroy.cs" />
-    <Compile Include="Assets\Features\Selection\Triangulator.cs" />
+    <Compile Include="Assets\Triangulator.cs" />
     <Compile Include="Assets\TwoDimensionalCollection.cs" />
     <Compile Include="Assets\VectorExtensions.cs" />
     <Compile Include="Assets\WilDebug.cs" />
@@ -401,6 +409,5 @@
     <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
